--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(clean_results)
 export(loadResults)
 export(old)
+export(percent_max_depth)
 export(process_data)
+export(produce_Ri_depth)
 export(results)
 export(runBottomPhaseApp)
 importFrom(data.table,":=")
